# aiogram3_stepik_course

./: .gitignore  main.py  pyproject.toml  q  test.py
book_bot/: .env.example  main.py
book_bot/database/: database.py
book_bot/handlers/: other.py  user.py
book_bot/keyboards/: bookmarks_kb.py  menu_commands.py
book_bot/services/: file_handling.py
callback_data_factory.py/: example_1.py  example_2.py  keyboard_builder_example.py  sea_war_example.py
db_echo_bot/: .env.example  README.md  docker-compose.example  docker-compose.yml  fipi_probs_last_w_pos.json
db_echo_bot/migrations/: create_tables.py  insert_problems.py
formatting/: html_escate.py  html_style_example.py  markdownv2_style_example.py  parse_mode_example_2.py  parse_mode_examples.py
inline_buttons/: callback_buttons_1.py  callback_buttons_2.py  inline_keyboard_generator.py  notifications_and_alerts.py  url_buttons.py
menu_button/: all_group_chats_scope_example.py  all_private_chats_scope_example.py  chat_administratots_scope_example.py  chat_member_scope_example.py  chat_scope_example.py  default_scope_example.py  del_menu_button.py  language_scope_example.py  set_and_del_scope_example.py  set_meny_button.py
middleware_example/: main.py
middleware_example/handlers/: other.py  user.py
modular_echo_bot/: main.py
problem_set_bot/: .gitignore  docker-compose.yml  main.py  requirements.txt
reply_buttons/: reply_keyboard_task.py  special_buttons_contact_location.py  special_buttons_polls.py  special_buttons_users_chat.py  special_buttons_web_app.py
rock_paper_scissors_bot/: main.py
(+55 files in other folders)
