[project]
name = "aiogram3-stepik-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "environs>=14.1.1",
    "psycopg>=3.2.6",
    "psycopg-pool>=3.2.6",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
